probe-rs-debug/src/snapshots/probe_rs_debug__debug_info__test__print_stacktrace.snap
---
source: probe-rs-debug/src/debug_info.rs
expression: printed_backtrace
---
Frame:
 function:        Reg<EVENTS_COMPARE_SPEC>::read
 source_location:
  path: /Users/yatekii/.cargo/registry/src/index.crates.io-6f17d22bba15001f/nrf51-pac-0.10.1/src/generic.rs
  line: Some(64)
  column: Some(Column(27))
 frame_base:      Some(20003f38)
Frame:
 function:        Instance::timer_running<TIMER0>
 source_location:
  path: /Users/yatekii/.cargo/registry/src/index.crates.io-6f17d22bba15001f/nrf-hal-common-0.14.1/src/timer.rs
  line: Some(397)
  column: Some(Column(9))
 frame_base:      Some(20003f38)
Frame:
 function:        <Timer<TIMER0, OneShot> as CountDown>::wait
 source_location:
  path: /Users/yatekii/.cargo/registry/src/index.crates.io-6f17d22bba15001f/nrf-hal-common-0.14.1/src/timer.rs
  line: Some(266)
  column: Some(Column(12))
 frame_base:      Some(20003f50)
Frame:
 function:        Timer<TIMER0, OneShot>::delay
 source_location:
  path: /Users/yatekii/.cargo/registry/src/index.crates.io-6f17d22bba15001f/nrf-hal-common-0.14.1/src/timer.rs
  line: Some(145)
  column: Some(Column(22))
 frame_base:      Some(20003f78)
Frame:
 function:        <Timer<TIMER0, OneShot> as DelayUs<u32>>::delay_us
 source_location:
  path: /Users/yatekii/.cargo/registry/src/index.crates.io-6f17d22bba15001f/nrf-hal-common-0.14.1/src/timer.rs
  line: Some(324)
  column: Some(Column(9))
 frame_base:      Some(20003f88)
Frame:
 function:        <Timer<TIMER0, OneShot> as DelayMs<u32>>::delay_ms
 source_location:
  path: /Users/yatekii/.cargo/registry/src/index.crates.io-6f17d22bba15001f/nrf-hal-common-0.14.1/src/timer.rs
  line: Some(297)
  column: Some(Column(9))
 frame_base:      Some(20003fa8)
Frame:
 function:        <Timer<TIMER0, OneShot> as DelayMs<u16>>::delay_ms
 source_location:
  path: /Users/yatekii/.cargo/registry/src/index.crates.io-6f17d22bba15001f/nrf-hal-common-0.14.1/src/timer.rs
  line: Some(306)
  column: Some(Column(9))
 frame_base:      Some(20003fc0)
Frame:
 function:        __cortex_m_rt_main
 source_location:
  path: /Users/yatekii/repos/microbit/examples/gpio-hal-blinky/src/main.rs
  line: Some(23)
  column: Some(Column(9))
 frame_base:      Some(20003ff0)
Frame:
 function:        __cortex_m_rt_main_trampoline
 source_location:
  path: /Users/yatekii/repos/microbit/examples/gpio-hal-blinky/src/main.rs
  line: Some(10)
  column: Some(Column(1))
 frame_base:      Some(20003ff8)
Frame:
 function:        Reset (unwinding stopped due to an error)
 source_location:
None
 frame_base:      None
