probe-rs-debug/src/snapshots/probe_rs_debug__debug_info__test__unwinding_inlined.snap
---
source: probe-rs-debug/src/debug_info.rs
expression: printed_backtrace
---
Frame:
 function:        wait<TIMER0, OneShot>
 source_location:
  path: /home/dominik/.cargo/registry/src/index.crates.io-6f17d22bba15001f/nrf-hal-common-0.14.1/src/timer.rs
  line: Some(266)
  column: Some(Column(12))
 frame_base:      Some(20003ff0)
Frame:
 function:        Timer<TIMER0, OneShot>::delay
 source_location:
  path: /home/dominik/.cargo/registry/src/index.crates.io-6f17d22bba15001f/nrf-hal-common-0.14.1/src/timer.rs
  line: Some(145)
  column: Some(Column(22))
 frame_base:      Some(20003ff0)
Frame:
 function:        delay_us<TIMER0, OneShot>
 source_location:
  path: /home/dominik/.cargo/registry/src/index.crates.io-6f17d22bba15001f/nrf-hal-common-0.14.1/src/timer.rs
  line: Some(324)
  column: Some(Column(9))
 frame_base:      Some(20003ff0)
Frame:
 function:        delay_ms<TIMER0, OneShot>
 source_location:
  path: /home/dominik/.cargo/registry/src/index.crates.io-6f17d22bba15001f/nrf-hal-common-0.14.1/src/timer.rs
  line: Some(297)
  column: Some(Column(14))
 frame_base:      Some(20003ff0)
Frame:
 function:        delay_ms<TIMER0, OneShot>
 source_location:
  path: /home/dominik/.cargo/registry/src/index.crates.io-6f17d22bba15001f/nrf-hal-common-0.14.1/src/timer.rs
  line: Some(306)
  column: Some(Column(14))
 frame_base:      Some(20003ff0)
Frame:
 function:        __cortex_m_rt_main
 source_location:
  path: /home/dominik/code/probe-rs/probe-rs-repro/nrf/inlined-functions/src/main.rs
  line: Some(20)
  column: Some(Column(15))
 frame_base:      Some(20003ff0)
Frame:
 function:        __cortex_m_rt_main_trampoline
 source_location:
  path: /home/dominik/code/probe-rs/probe-rs-repro/nrf/inlined-functions/src/main.rs
  line: Some(7)
  column: Some(Column(1))
 frame_base:      Some(20003ff8)
Frame:
 function:        Reset
 source_location:
None
 frame_base:      None
